--- a/scripts/scripts4/gestion_fracciones.ipynb
+++ b/scripts/scripts4/gestion_fracciones.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Este programa realiza diferentes cálculos con fracciones, así como el cálculo del mínimo común múltiplo\\n o del máximo común divisor.\")"
+    "print(\"Este programa realiza diferentes cálculos con fracciones, así como el cálculo del mínimo común múltiplo o del máximo común divisor.\")"
    ]
   },
   {
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mincomun(a,b):   #Función que calcula el mínimo común múltiplo\n",
+    "def mincomun(a,b):   #Función que calcula el mínimo común múltiplo.\n",
     "    \n",
     "    mayor = big(a,b)\n",
     "    menor = small(a,b)\n",
@@ -87,16 +87,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "official-problem",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Simplificar fracciones"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "placed-cream",
    "metadata": {},
    "outputs": [],
@@ -108,7 +98,7 @@
     "    \n",
     "    mayor = big(a,b)\n",
     "    menor = small(a,b)\n",
-    "    negativo = comprobar(a,b)\n",
+    "    negativ = comprobar(a,b)\n",
     "    \n",
     "    for n in range(menor+1,1,-1):\n",
     "        calc = a % n\n",
@@ -118,10 +108,10 @@
     "            a = a // n\n",
     "            b = b // n\n",
     "            \n",
-    "    if negativo == 1:\n",
+    "    if negativ == 1:\n",
     "        a = a * -1\n",
     "        \n",
-    "    return a,b"
+    "    return a,b           #Obtenemos la fracción en un array de 2 valores."
    ]
   },
   {
@@ -140,7 +130,7 @@
     "        elif ((a%b == 0) and (b != 1)) :     #Si son divisibles entre si, y el denominador no es 1 se da la fracción como inválida.\n",
     "            print(\"El numerador y denominador no pueden ser divisibles entre ellos.\")\n",
     "            \n",
-    "        return a,b"
+    "        return a,b           #Obtenemos la fracción en un array de 2 valores."
    ]
   },
   {
@@ -156,7 +146,7 @@
     "    leerf(a,b)\n",
     "    fraccion = a,b\n",
     "    \n",
-    "    return a,b"
+    "    return a,b           #Obtenemos la fracción en un array de 2 valores."
    ]
   },
   {
@@ -166,21 +156,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sumarf(frac1,frac2): #Función que realia la suma de fracciones. Si las fracciones tienen un denominador común\n",
-    "                         #se suman los numeradores. Sino, se haya el mínimo común múltiplo de los denominadores,\n",
-    "                         #una vez obtenido, se divide por el denominador y se suman los numerados, ya que los\n",
-    "                         #denominadores ya son iguales (el mcm).\n",
+    "def sumarf(frac1,frac2): #Función que realia la suma de fracciones. \n",
     "    \n",
-    "    if frac1[1] == frac2[1]:\n",
-    "        sumanumerador = frac1[0] + frac2[0]\n",
+    "    if frac1[1] == frac2[1]:          \n",
+    "        sumanumerador = frac1[0] + frac2[0]        #Utilizamos la posición del array, ya que las fracciones se almacenan en un \n",
+    "                                                   #array de dos valores. Siendo la posicón 0 el numerador y la 1 el denominador.\n",
+    "                                                   #Como antes he dicho, si los denominadores son iguales solo hace falta sumar los\n",
+    "                                                   #numeradores.\n",
     "        \n",
     "    else:\n",
-    "        sumadenominador = mincomun(frac1[1],frac2[1])\n",
-    "        num1 = int((sumadenominador / frac1[1]) * frac1[0])\n",
-    "        num2 = int((sumadenominador / frac2[1]) * frac2[0])\n",
-    "        sumanumerador = num1 + num2\n",
+    "        sumadenominador = mincomun(frac1[1],frac2[1])        #En el caso de que el denominador sea diferente, debemos calcular\n",
+    "        num1 = int((sumadenominador / frac1[1]) * frac1[0])  #el mcm de ambos denominadores, una vez hayado dividirlo entre el denominador\n",
+    "        num2 = int((sumadenominador / frac2[1]) * frac2[0])  #anterior y multiplicarlo por el numerador. Tras esto tendremos dos fracciones\n",
+    "        sumanumerador = num1 + num2                          #con el mismo denominador(mcm) y solo tendremos que sumar los numeradores.\n",
     "    \n",
-    "    return sumanumerador,sumadenominador"
+    "    return sumanumerador,sumadenominador           #Obtenemos la fracción en un array de 2 posiciones."
    ]
   },
   {
@@ -202,7 +192,7 @@
     "        num2 = int((sumadenominador / frac2[1]) * frac2[0])\n",
     "        restanumerador = num1 - num2\n",
     "    \n",
-    "    return restanumerador,restadenominador"
+    "    return restanumerador,restadenominador           #Obtenemos la fracción en un array de 2 valores."
    ]
   },
   {
@@ -217,7 +207,7 @@
     "    multinumerador = frac1[0] * frac2[0]\n",
     "    multidenominador = frac1[1] * frac2[1]\n",
     "    \n",
-    "    return multinumerador,multidenominador"
+    "    return multinumerador,multidenominador           #Obtenemos la fracción en un array de 2 valores."
    ]
   },
   {
@@ -232,7 +222,7 @@
     "    divnumerador = frac1[0] * frac2[1]\n",
     "    divdenominador = frac1[1] * frac2[0]\n",
     "    \n",
-    "    return divnumerador, divdenominador"
+    "    return divnumerador, divdenominador           #Obtenemos la fracción en un array de 2 valores."
    ]
   },
   {
@@ -242,20 +232,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def leerfracciones(): #Función que se encarga de leer 2 fraccciones\n",
+    "def leerfracciones(): #Función que se encarga de leer 2 fraccciones.\n",
     "    \n",
     "    for i in range(1,3):\n",
     "        \n",
     "        if i == 1:    #Condición para establecer la primera fracción, utilizando las funciones leerf, que comprueba\n",
     "                      #que el denominador no es 0, y que los números de la fracción son primos entre sí. Para, \n",
-    "                      #pasarselas a la función escribef y almacenar la fracción 1 como frac1\n",
+    "                      #pasarselas a la función escribef y almacenar la fracción 1 como frac1.\n",
     "            leerf(a,b)\n",
     "            frac1 = escribef(a,b)\n",
     "            \n",
     "        elif i == 2:    #Lo mismo que la anterior pero para la fracción 2.\n",
     "            leerf(c,d)\n",
     "            frac2 = escribef(c,d)\n",
-    "    return frac1,frac2"
+    "    return frac1,frac2           #Obtenemos las fracciones en una matriz de 2 posiciones, que almacena la fracción1 en la primera posición\n",
+    "                                 #y la fracción2 en la segunda."
    ]
   },
   {
@@ -265,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def big(a,b):    #Función que establece el número mayor\n",
+    "def big(a,b):    #Función que establece el número mayor.\n",
     "    \n",
     "    negativo(a)  #Se llama a la función que vuelve un número negativo positivo para no asignar el valor de número\n",
     "    negativo(b)  #mayor, solo porque uno sea negativo.\n",
@@ -286,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def small(a,b):     #Función que establece el número menor\n",
+    "def small(a,b):     #Función que establece el número menor.\n",
     "    \n",
     "    negativo(a)\n",
     "    negativo(b)\n",
@@ -307,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def negativo(a):    #Función que vuelve positivo un número negativo introducido para evitar fallos al hacer los cálculos\n",
+    "def negativo(a):    #Función que vuelve positivo un número negativo introducido para evitar fallos al hacer los cálculos.\n",
     "    if (a < 0):\n",
     "        a = a * -1\n",
     "        \n",
@@ -321,13 +312,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def comprobar(a,b):   #Función para comprobar si numerador o denominador son negativos y recordarlo si simplificamos\n",
+    "def comprobar(a,b):   #Función para comprobar si numerador o denominador son negativos y recordarlo si simplificamos.\n",
     "    if (a < 0) or (b < 0):\n",
-    "        negativo = 1\n",
+    "        negativ = 1\n",
     "    else:\n",
-    "        negativo = 0\n",
+    "        negativ = 0\n",
     "        \n",
-    "    return negativo"
+    "    return negativ"
    ]
   },
   {
@@ -337,7 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def menu():    #Función que mostrará el menú con las diferentes opciones\n",
+    "def menu():    #Función que mostrará el menú con las diferentes opciones.\n",
     "    print(\"\\n\\nEscoge la acción a realizar:\")\n",
     "    print(\"1. Máximo común divisor de dos números.\")\n",
     "    print(\"2. Mínimo común múltiplo de dos números.\")\n",
@@ -359,27 +350,27 @@
    },
    "outputs": [],
    "source": [
-    "menu()    #Mostramos el menú\n",
-    "operacion = int(input(\"Elige una opción: \"))  #Escogemos la operación a realizar\n",
+    "menu()    #Mostramos el menú.\n",
+    "operacion = int(input(\"Elige una opción: \"))  #Escogemos la operación a realizar.\n",
     "\n",
-    "while operacion != 0:    #Bucle que permite realizar más de una operación mientras la opción no sea 0\n",
+    "while operacion != 0:    #Bucle que permite realizar más de una operación mientras la opción no sea 0.\n",
     "    \n",
     "    if ((operacion == 1) or (operacion == 2)):  #Condición para solo pedir dos números si queremos calcular\n",
-    "                                                # el mcm o el mcd\n",
+    "                                                # el mcm o el mcd.\n",
     "        a = int(input(\"Introduce el primer número: \"))\n",
     "        b = int(input(\"Introduce el segundo número: \"))\n",
     "        \n",
-    "        if operacion == 1:     #Cálculo del mcd\n",
+    "        if operacion == 1:     #Cálculo del mcd.\n",
     "            resultado = maxcomun(a,b)\n",
     "            print(\"\\nEl máximo común divisor de \",a,\" y \",b,\" es \",resultado,\"\\n\")\n",
     "            \n",
-    "        elif operacion == 2:   #Cálculo del mcm\n",
+    "        elif operacion == 2:   #Cálculo del mcm.\n",
     "            resultado = mincomun(a,b)\n",
     "            print(\"El mínimo común múltiplo de \",a,\" y \",b,\" es \",resultado,\"\\n\")\n",
     "        \n",
     "    elif operacion == 7:     #Condición para solo pedir dos números también si solo queremos simplificar 1 fracción\n",
     "                             #Llamando a la función simplificaf\n",
-    "        a = int(input(\"Introduce el numerado de la fracción: \"))\n",
+    "        a = int(input(\"Introduce el numerador de la fracción: \"))\n",
     "        b = int(input(\"Introduce el denominador de la fracción: \"))\n",
     "        \n",
     "        simplificada = simplificaf(a,b)\n",
@@ -387,76 +378,110 @@
     "        denominador = simplificada[1]\n",
     "        print(\"\\nLa fración simplificada es \", numerador,\"/\",denominador)\n",
     "        \n",
-    "    #Cndición para pedir 4 variables si se va a realizar operaciones entre 2 fracciones\n",
+    "    #Condición para pedir 4 variables si se va a realizar operaciones entre 2 fracciones\n",
     "    elif (operacion == 3) or (operacion == 4) or (operacion == 5) or (operacion == 6):\n",
-    "        a = int(input(\"Introduce el numerado de la primera fracción: \"))\n",
+    "        a = int(input(\"Introduce el numerador de la primera fracción: \"))\n",
     "        b = int(input(\"Introduce el denominador de la primera fracción: \"))\n",
-    "        c = int(input(\"Introduce el numerado de la segunda fracción: \"))\n",
+    "        c = int(input(\"Introduce el numerador de la segunda fracción: \"))\n",
     "        d = int(input(\"Introduce el denominador de la segunda fracción: \"))\n",
-    "        fracciones = leerfracciones()\n",
-    "        frac1 = fracciones[0]\n",
-    "        frac2 = fracciones[1]\n",
+    "        fracciones = leerfracciones()  #Se llama a la función leerfracciones para obtener las fracciones con las que se realizarán las operaciones.\n",
+    "        frac1 = fracciones[0]          #Se establece la primera fracción, como la primera posición de la mátriz.\n",
+    "        frac2 = fracciones[1]          #Se establece la segunda fracción, como la segunda posición de la mátriz.\n",
     "        \n",
-    "        if operacion == 3:\n",
+    "        if operacion == 3:            #Se llama a la función suma y se almacenan los resultados según la posición en el array.\n",
     "            suma = sumarf(frac1,frac2)\n",
     "            numerador = suma[0]\n",
     "            denominador = suma[1]\n",
     "            print(\"\\nLa suma de las fracciones da \", numerador,\"/\",denominador)\n",
+    "            \n",
+    "            #Se pregunta si se desea simplificar la fracción, si la repsuesta es si se llama a la función, se le pasan los valores\n",
+    "            #obtenidos de la suma, y se simplifica si es posible, sino muestra un mensaje de que no es simplificable.\n",
     "            simplificar = input(\"\\nDesea simplificar el resultado?(Responda en mínusculas)\\n\")\n",
     "            \n",
     "            if simplificar == \"si\":\n",
     "                simplificada = simplificaf(numerador,denominador)\n",
-    "                numerador = simplificada[0]\n",
-    "                denominador = simplificada[1]\n",
-    "                print(\"\\nLa fración simplificada es \", simplificada[0],\"/\",simplificada[1])\n",
+    "                \n",
+    "                if simplificaf(numerador,denominador) == dividirf(frac1,frac2):\n",
+    "                    print(\"La fracción \", numerador,\"/\",denominador ,\" no es simplificable.\")\n",
+    "                \n",
+    "                else:\n",
+    "                    print(\"\\nLa fración simplificada es \", simplificada[0],\"/\",simplificada[1])\n",
     "                \n",
     "        elif operacion == 4:\n",
     "            resta = restarf(frac1,frac2)\n",
     "            numerador = resta[0]\n",
     "            denominador = resta[1]\n",
-    "            print(\"\\nLa suma de las fracciones da \", numerador,\"/\",denominador)\n",
+    "            print(\"\\nLa resta de las fracciones da \", numerador,\"/\",denominador)\n",
+    "            \n",
+    "            #Se pregunta si se desea simplificar la fracción, si la repsuesta es si se llama a la función, se le pasan los valores\n",
+    "            #obtenidos de la resta, y se simplifica si es posible, sino muestra un mensaje de que no es simplificable.\n",
     "            simplificar = input(\"\\nDesea simplificar el resultado?(Responda en mínusculas)\\n\")\n",
     "            \n",
     "            if simplificar == \"si\":\n",
     "                simplificada = simplificaf(numerador,denominador)\n",
-    "                numerador = simplificada[0]\n",
-    "                denominador = simplificada[1]\n",
-    "                print(\"\\nLa fración simplificada es \", simplificada[0],\"/\",simplificada[1])\n",
+    "                \n",
+    "                if simplificaf(numerador,denominador) == dividirf(frac1,frac2):\n",
+    "                    print(\"La fracción \", numerador,\"/\",denominador ,\" no es simplificable.\")\n",
+    "                \n",
+    "                else:\n",
+    "                    print(\"\\nLa fración simplificada es \", simplificada[0],\"/\",simplificada[1])\n",
     "                \n",
     "        elif operacion == 5:\n",
     "            multi = multiplicarf(frac1,frac2)\n",
     "            numerador = multi[0]\n",
     "            denominador = multi[1]\n",
-    "            print(\"\\nLa suma de las fracciones da \", numerador,\"/\",denominador)\n",
+    "            print(\"\\nLa multiplicación de las fracciones da \", numerador,\"/\",denominador)\n",
+    "            \n",
+    "            #Se pregunta si se desea simplificar la fracción, si la repsuesta es si se llama a la función, se le pasan los valores\n",
+    "            #obtenidos de la multiplicación, y se simplifica si es posible, sino muestra un mensaje de que no es simplificable.\n",
     "            simplificar = input(\"\\nDesea simplificar el resultado?(Responda en mínusculas)\\n\")\n",
     "            \n",
     "            if simplificar == \"si\":\n",
     "                simplificada = simplificaf(numerador,denominador)\n",
-    "                numerador = simplificada[0]\n",
-    "                denominador = simplificada[1]\n",
-    "                print(\"\\nLa fración simplificada es \", simplificada[0],\"/\",simplificada[1])\n",
+    "                \n",
+    "                if simplificaf(numerador,denominador) == dividirf(frac1,frac2):\n",
+    "                    print(\"La fracción \", numerador,\"/\",denominador ,\" no es simplificable.\")\n",
+    "                \n",
+    "                else:\n",
+    "                    print(\"\\nLa fración simplificada es \", simplificada[0],\"/\",simplificada[1])\n",
     "                \n",
     "        elif operacion == 6:\n",
     "            division = dividirf(frac1,frac2)\n",
     "            numerador = division[0]\n",
     "            denominador = division[1]\n",
-    "            print(\"\\nLa suma de las fracciones da \", numerador,\"/\",denominador)\n",
+    "            print(\"\\nLa división de las fracciones da \", numerador,\"/\",denominador)\n",
+    "            \n",
+    "            #Se pregunta si se desea simplificar la fracción, si la repsuesta es si se llama a la función, se le pasan los valores\n",
+    "            #obtenidos de la división, y se simplifica si es posible, sino muestra un mensaje de que no es simplificable.\n",
     "            simplificar = input(\"\\nDesea simplificar el resultado?(Responda en mínusculas)\\n\")\n",
     "            \n",
     "            if simplificar == \"si\":\n",
     "                simplificada = simplificaf(numerador,denominador)\n",
-    "                print(\"\\nLa fración simplificada es \", simplificada[0],\"/\",simplificada[1])  \n",
+    "                \n",
+    "                if simplificaf(numerador,denominador) == dividirf(frac1,frac2):\n",
+    "                    print(\"La fracción \", numerador,\"/\",denominador ,\" no es simplificable.\")\n",
+    "                \n",
+    "                else:\n",
+    "                    print(\"\\nLa fración simplificada es \", simplificada[0],\"/\",simplificada[1])\n",
     "        \n",
     "    \n",
-    "    elif operacion == 8:\n",
+    "    elif operacion == 8:     #Se muestra el menú si se desea.\n",
     "        menu()\n",
     "        \n",
-    "    else:\n",
+    "    else:                    #Si el valor introducido no corresponde a ninguna opción se muestra un error.\n",
     "        print(\"Opción errónea, escoge una válida.\\n\\n\")\n",
     "    \n",
-    "    menu()\n",
+    "    menu()                   #Se muestra de nuevo el menú, y se vuelve a pedir opción para poder seguir utilizando el programa.\n",
     "    operacion = int(input(\"\\n\\nElige una opción: \"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "otherwise-appreciation",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
