--- a/scripts/scripts4/gestion_fracciones.ipynb
+++ b/scripts/scripts4/gestion_fracciones.ipynb
@@ -126,9 +126,11 @@
     "        \n",
     "        if b == 0:    #Si el denominador es 0 la fración no es válida.\n",
     "            print(\"El denominador no puede ser 0\")\n",
+    "            return False\n",
     "            \n",
     "        elif ((a%b == 0) and (b != 1)) :     #Si son divisibles entre si, y el denominador no es 1 se da la fracción como inválida.\n",
     "            print(\"El numerador y denominador no pueden ser divisibles entre ellos.\")\n",
+    "            return False\n",
     "            \n",
     "        return a,b           #Obtenemos la fracción en un array de 2 valores."
    ]
@@ -143,8 +145,8 @@
     "def escribef(a,b):   #Función que se encarga de escribir una fracción. LLamando a la función que comprueba que el denominador\n",
     "                     #no sea 0 y sean primos entre sí.\n",
     "    \n",
-    "    leerf(a,b)\n",
-    "    fraccion = a,b\n",
+    "    if leerf(a,b):\n",
+    "        fraccion = a,b\n",
     "    \n",
     "    return a,b           #Obtenemos la fracción en un array de 2 valores."
    ]
@@ -236,15 +238,15 @@
     "    \n",
     "    for i in range(1,3):\n",
     "        \n",
-    "        if i == 1:    #Condición para establecer la primera fracción, utilizando las funciones leerf, que comprueba\n",
-    "                      #que el denominador no es 0, y que los números de la fracción son primos entre sí. Para, \n",
-    "                      #pasarselas a la función escribef y almacenar la fracción 1 como frac1.\n",
-    "            leerf(a,b)\n",
+    "        if i == 1:    #Condición para establecer la primera fracción, utilizando la funcion escribef que \n",
+    "                      #utiliza la función leerf, que compruebaque el denominador no es 0, y que los números \n",
+    "                      #de la fracción son primos entre sí. Para,almacenar la fracción 1 como frac1.\n",
+    "                    \n",
     "            frac1 = escribef(a,b)\n",
     "            \n",
     "        elif i == 2:    #Lo mismo que la anterior pero para la fracción 2.\n",
-    "            leerf(c,d)\n",
     "            frac2 = escribef(c,d)\n",
+    "            \n",
     "    return frac1,frac2           #Obtenemos las fracciones en una matriz de 2 posiciones, que almacena la fracción1 en la primera posición\n",
     "                                 #y la fracción2 en la segunda."
    ]
@@ -384,85 +386,86 @@
     "        b = int(input(\"Introduce el denominador de la primera fracción: \"))\n",
     "        c = int(input(\"Introduce el numerador de la segunda fracción: \"))\n",
     "        d = int(input(\"Introduce el denominador de la segunda fracción: \"))\n",
-    "        fracciones = leerfracciones()  #Se llama a la función leerfracciones para obtener las fracciones con las que se realizarán las operaciones.\n",
-    "        frac1 = fracciones[0]          #Se establece la primera fracción, como la primera posición de la mátriz.\n",
-    "        frac2 = fracciones[1]          #Se establece la segunda fracción, como la segunda posición de la mátriz.\n",
+    "        if ((leerf(a,b)) and (leerf(c,d))):    #Comprobamos si las fracciones son correctas con la función leerf\n",
+    "            fracciones = leerfracciones()  #Se llama a la función leerfracciones para obtener las fracciones con las que se realizarán las operaciones.\n",
+    "            frac1 = fracciones[0]          #Se establece la primera fracción, como la primera posición de la mátriz.\n",
+    "            frac2 = fracciones[1]          #Se establece la segunda fracción, como la segunda posición de la mátriz.\n",
     "        \n",
-    "        if operacion == 3:            #Se llama a la función suma y se almacenan los resultados según la posición en el array.\n",
-    "            suma = sumarf(frac1,frac2)\n",
-    "            numerador = suma[0]\n",
-    "            denominador = suma[1]\n",
-    "            print(\"\\nLa suma de las fracciones da \", numerador,\"/\",denominador)\n",
-    "            \n",
-    "            #Se pregunta si se desea simplificar la fracción, si la repsuesta es si se llama a la función, se le pasan los valores\n",
-    "            #obtenidos de la suma, y se simplifica si es posible, sino muestra un mensaje de que no es simplificable.\n",
-    "            simplificar = input(\"\\nDesea simplificar el resultado?(Responda en mínusculas)\\n\")\n",
-    "            \n",
-    "            if simplificar == \"si\":\n",
-    "                simplificada = simplificaf(numerador,denominador)\n",
-    "                \n",
-    "                if simplificaf(numerador,denominador) == dividirf(frac1,frac2):\n",
-    "                    print(\"La fracción \", numerador,\"/\",denominador ,\" no es simplificable.\")\n",
-    "                \n",
-    "                else:\n",
-    "                    print(\"\\nLa fración simplificada es \", simplificada[0],\"/\",simplificada[1])\n",
-    "                \n",
-    "        elif operacion == 4:\n",
-    "            resta = restarf(frac1,frac2)\n",
-    "            numerador = resta[0]\n",
-    "            denominador = resta[1]\n",
-    "            print(\"\\nLa resta de las fracciones da \", numerador,\"/\",denominador)\n",
-    "            \n",
-    "            #Se pregunta si se desea simplificar la fracción, si la repsuesta es si se llama a la función, se le pasan los valores\n",
-    "            #obtenidos de la resta, y se simplifica si es posible, sino muestra un mensaje de que no es simplificable.\n",
-    "            simplificar = input(\"\\nDesea simplificar el resultado?(Responda en mínusculas)\\n\")\n",
-    "            \n",
-    "            if simplificar == \"si\":\n",
-    "                simplificada = simplificaf(numerador,denominador)\n",
-    "                \n",
-    "                if simplificaf(numerador,denominador) == dividirf(frac1,frac2):\n",
-    "                    print(\"La fracción \", numerador,\"/\",denominador ,\" no es simplificable.\")\n",
-    "                \n",
-    "                else:\n",
-    "                    print(\"\\nLa fración simplificada es \", simplificada[0],\"/\",simplificada[1])\n",
-    "                \n",
-    "        elif operacion == 5:\n",
-    "            multi = multiplicarf(frac1,frac2)\n",
-    "            numerador = multi[0]\n",
-    "            denominador = multi[1]\n",
-    "            print(\"\\nLa multiplicación de las fracciones da \", numerador,\"/\",denominador)\n",
-    "            \n",
-    "            #Se pregunta si se desea simplificar la fracción, si la repsuesta es si se llama a la función, se le pasan los valores\n",
-    "            #obtenidos de la multiplicación, y se simplifica si es posible, sino muestra un mensaje de que no es simplificable.\n",
-    "            simplificar = input(\"\\nDesea simplificar el resultado?(Responda en mínusculas)\\n\")\n",
-    "            \n",
-    "            if simplificar == \"si\":\n",
-    "                simplificada = simplificaf(numerador,denominador)\n",
-    "                \n",
-    "                if simplificaf(numerador,denominador) == dividirf(frac1,frac2):\n",
-    "                    print(\"La fracción \", numerador,\"/\",denominador ,\" no es simplificable.\")\n",
-    "                \n",
-    "                else:\n",
-    "                    print(\"\\nLa fración simplificada es \", simplificada[0],\"/\",simplificada[1])\n",
-    "                \n",
-    "        elif operacion == 6:\n",
-    "            division = dividirf(frac1,frac2)\n",
-    "            numerador = division[0]\n",
-    "            denominador = division[1]\n",
-    "            print(\"\\nLa división de las fracciones da \", numerador,\"/\",denominador)\n",
-    "            \n",
-    "            #Se pregunta si se desea simplificar la fracción, si la repsuesta es si se llama a la función, se le pasan los valores\n",
-    "            #obtenidos de la división, y se simplifica si es posible, sino muestra un mensaje de que no es simplificable.\n",
-    "            simplificar = input(\"\\nDesea simplificar el resultado?(Responda en mínusculas)\\n\")\n",
-    "            \n",
-    "            if simplificar == \"si\":\n",
-    "                simplificada = simplificaf(numerador,denominador)\n",
-    "                \n",
-    "                if simplificaf(numerador,denominador) == dividirf(frac1,frac2):\n",
-    "                    print(\"La fracción \", numerador,\"/\",denominador ,\" no es simplificable.\")\n",
-    "                \n",
-    "                else:\n",
-    "                    print(\"\\nLa fración simplificada es \", simplificada[0],\"/\",simplificada[1])\n",
+    "            if operacion == 3:            #Se llama a la función suma y se almacenan los resultados según la posición en el array.\n",
+    "                suma = sumarf(frac1,frac2)\n",
+    "                numerador = suma[0]\n",
+    "                denominador = suma[1]\n",
+    "                print(\"\\nLa suma de las fracciones da \", numerador,\"/\",denominador)\n",
+    "\n",
+    "                #Se pregunta si se desea simplificar la fracción, si la repsuesta es si se llama a la función, se le pasan los valores\n",
+    "                #obtenidos de la suma, y se simplifica si es posible, sino muestra un mensaje de que no es simplificable.\n",
+    "                simplificar = input(\"\\nDesea simplificar el resultado?(Responda en mínusculas)\\n\")\n",
+    "\n",
+    "                if simplificar == \"si\":\n",
+    "                    simplificada = simplificaf(numerador,denominador)\n",
+    "\n",
+    "                    if simplificaf(numerador,denominador) == dividirf(frac1,frac2):\n",
+    "                        print(\"La fracción \", numerador,\"/\",denominador ,\" no es simplificable.\")\n",
+    "\n",
+    "                    else:\n",
+    "                        print(\"\\nLa fración simplificada es \", simplificada[0],\"/\",simplificada[1])\n",
+    "\n",
+    "            elif operacion == 4:\n",
+    "                resta = restarf(frac1,frac2)\n",
+    "                numerador = resta[0]\n",
+    "                denominador = resta[1]\n",
+    "                print(\"\\nLa resta de las fracciones da \", numerador,\"/\",denominador)\n",
+    "\n",
+    "                #Se pregunta si se desea simplificar la fracción, si la repsuesta es si se llama a la función, se le pasan los valores\n",
+    "                #obtenidos de la resta, y se simplifica si es posible, sino muestra un mensaje de que no es simplificable.\n",
+    "                simplificar = input(\"\\nDesea simplificar el resultado?(Responda en mínusculas)\\n\")\n",
+    "\n",
+    "                if simplificar == \"si\":\n",
+    "                    simplificada = simplificaf(numerador,denominador)\n",
+    "\n",
+    "                    if simplificaf(numerador,denominador) == dividirf(frac1,frac2):\n",
+    "                        print(\"La fracción \", numerador,\"/\",denominador ,\" no es simplificable.\")\n",
+    "\n",
+    "                    else:\n",
+    "                        print(\"\\nLa fración simplificada es \", simplificada[0],\"/\",simplificada[1])\n",
+    "\n",
+    "            elif operacion == 5:\n",
+    "                multi = multiplicarf(frac1,frac2)\n",
+    "                numerador = multi[0]\n",
+    "                denominador = multi[1]\n",
+    "                print(\"\\nLa multiplicación de las fracciones da \", numerador,\"/\",denominador)\n",
+    "\n",
+    "                #Se pregunta si se desea simplificar la fracción, si la repsuesta es si se llama a la función, se le pasan los valores\n",
+    "                #obtenidos de la multiplicación, y se simplifica si es posible, sino muestra un mensaje de que no es simplificable.\n",
+    "                simplificar = input(\"\\nDesea simplificar el resultado?(Responda en mínusculas)\\n\")\n",
+    "\n",
+    "                if simplificar == \"si\":\n",
+    "                    simplificada = simplificaf(numerador,denominador)\n",
+    "\n",
+    "                    if simplificaf(numerador,denominador) == dividirf(frac1,frac2):\n",
+    "                        print(\"La fracción \", numerador,\"/\",denominador ,\" no es simplificable.\")\n",
+    "\n",
+    "                    else:\n",
+    "                        print(\"\\nLa fración simplificada es \", simplificada[0],\"/\",simplificada[1])\n",
+    "\n",
+    "            elif operacion == 6:\n",
+    "                division = dividirf(frac1,frac2)\n",
+    "                numerador = division[0]\n",
+    "                denominador = division[1]\n",
+    "                print(\"\\nLa división de las fracciones da \", numerador,\"/\",denominador)\n",
+    "\n",
+    "                #Se pregunta si se desea simplificar la fracción, si la repsuesta es si se llama a la función, se le pasan los valores\n",
+    "                #obtenidos de la división, y se simplifica si es posible, sino muestra un mensaje de que no es simplificable.\n",
+    "                simplificar = input(\"\\nDesea simplificar el resultado?(Responda en mínusculas)\\n\")\n",
+    "\n",
+    "                if simplificar == \"si\":\n",
+    "                    simplificada = simplificaf(numerador,denominador)\n",
+    "\n",
+    "                    if simplificaf(numerador,denominador) == dividirf(frac1,frac2):\n",
+    "                        print(\"La fracción \", numerador,\"/\",denominador ,\" no es simplificable.\")\n",
+    "\n",
+    "                    else:\n",
+    "                        print(\"\\nLa fración simplificada es \", simplificada[0],\"/\",simplificada[1])\n",
     "        \n",
     "    \n",
     "    elif operacion == 8:     #Se muestra el menú si se desea.\n",
